--- a/Lab 1.ipynb
+++ b/Lab 1.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +177,9 @@
     "        self.bias = 0\n",
     "\n",
     "    def forward(self, x):\n",
-    "        linear = sum(w*x_i for w, x_i in zip(self.weights, x)) + self.bias\n",
-    "        prediction = 1 if linear >= 0 else 0\n",
-    "        return prediction\n",
+    "        linear = sum(w*xi for w, xi in zip(self.weights, x)) + self.bias\n",
+    "        pred = 1 if linear >= 0 else 0\n",
+    "        return pred\n",
     "        \n",
     "    def backward(self, x, y):\n",
     "        error = y - self.forward(x)\n",
@@ -189,7 +189,7 @@
     "        for e in range(epochs):\n",
     "            for i in range(len(y)):\n",
     "                error = self.backward(x[i], y[i])\n",
-    "                self.weights = [w + error * x_i for w, x_i in zip(self.weights, x[i])]\n",
+    "                self.weights = [w + error * xi for w, xi in zip(self.weights, x[i])]\n",
     "                self.bias += error\n",
     "        value=[self.weights,self.bias]\n",
     "        return value\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[[1.7999999999999992, -1.3000000000000003], -4]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
